# Hello

./: .gitignore
hello-GLP/: README.md  docker-compose.yml  promtail.yml
hello-blob/: test.py
hello-celery/: tasks.py
hello-data-spec-validator/: hello.py
hello-fly/: README.md  fly.toml  server.py
hello-k8s/: deploy_nginx.yaml  example-ingress.yaml  ingress_nginx.yaml  kubenetes-demo.yaml  kubenetes-demo2.yaml  local_pv.yaml  readme.md  service.yaml  service_nginx.yaml  volume_empty.yaml
hello-protobuf/: README.md  addresbook_pb2.py  hello.py  hello_2.py
hello-python/: asyncio.py
hello_fastapi/follow_ithelp/: docker-compose-primary-replica.yml  docker-compose.yml  main.py  pyproject.toml  run.py  test_crud_api.py
hello_fastapi/follow_ithelp/api/: auth.py  items.py  users.py
hello_fastapi/follow_ithelp/auth/: jwt.py  utils.py
hello_fastapi/follow_ithelp/backend/: Dockerfile  requirements.txt
hello_fastapi/follow_ithelp/crud/: users.py
hello_fastapi/follow_ithelp/database/: fake_db.py  generic.py  redis_cache.py
hello_fastapi/follow_ithelp/models/: base.py  item.py  users.py
hello_fastapi/follow_ithelp/primary-replica/: db.env
hello_fastapi/follow_ithelp/schemas/: auth.py  items.py  users.py
hello_fastapi/follow_ithelp/setting/: .env.dev  .env.prod  config.py
hello_fastapi/follow_ithelp/sync/api/: depends.py  items.py  users.py
hello_fastapi/follow_ithelp/sync/crud/: users.py
hello_fastapi/follow_ithelp/tests/: conftest.py  pytest.ini  test_crud_api.py  test_redis.py
hello_fastapi/follow_ithelp/tests/data/: user_data.json
(+111 files in other folders)
